<resources>
    <string name="app_name">TipCalculator-Manning</string>
    <string name="lowTip">8% Tip</string>
    <string name="medTip">10% Tip</string>
    <string name="regTip">18% Tip</string>
    <string name="customTip">Custom Tip</string>
    <string name="tipTitle">Tip Amounts</string>
    <string name="calcButton">Calculate</string>
    <string name="resetButton">Reset</string>
    <string name="numPeople">More than one person?</string>
    <string name="total">Bill: </string>
    <string name="amount">Please enter your amount</string>
    <string name="exitB"> X </string>
</resources>