<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tipTitle"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:text="@string/tipTitle"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="310dp" />

    <RadioGroup
        android:layout_width="120dp"
        android:layout_height="190dp"
        tools:layout_editor_absoluteX="253dp"
        tools:layout_editor_absoluteY="254dp">

        <RadioButton
            android:id="@+id/lowTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowTip" />

        <RadioButton
            android:id="@+id/mediumTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medTip" />

        <RadioButton
            android:id="@+id/RegTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regTip" />

        <RadioButton
            android:id="@+id/customTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customTip" />
    </RadioGroup>

    <Switch
        android:id="@+id/people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numPeople"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="208dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButton"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="521dp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetButton"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="569dp" />

    <EditText
        android:id="@+id/amount_line"
        android:layout_width="223dp"
        android:layout_height="38dp"
        android:layout_marginTop="344dp"
        android:inputType="text"
        android:text="@string/amount"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>